--- a/gallery.html
+++ b/gallery.html
@@ -62,6 +62,7 @@
         <!-- /.container -->
     </nav>
 
+<p><a href="assets/CERT.png">CERT.PNG</a></p>
 <p><a href="assets/PROMOSHOT.png">PROMOSHOT.PNG</a></p>
 <p><a href="assets/FLUFFY_1.png">FLUFFY_1.png</a></p>
 <p><a href="assets/FLUFFY_2.png">FLUFFY_2.png</a></p>
