--- a/gallery.html
+++ b/gallery.html
@@ -62,10 +62,9 @@
         <!-- /.container -->
     </nav>
 
-<p><a href="assets/CERT.png">CERT.PNG</a></p>
-<p><a href="assets/PROMOSHOT.png">PROMOSHOT.PNG</a></p>
-<p><a href="assets/FLUFFY_1.png">FLUFFY_1.png</a></p>
-<p><a href="assets/FLUFFY_2.png">FLUFFY_2.png</a></p>
+
+<p><a href="assets/PROMOSHOT.png">N.A</a></p>
+
 
 
     <!-- jQuery Version 1.11.1 -->
