--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </nav>
 
 <p>NAME: JAMILA, ANEKKE</p>
-<p>BRAND: XSU (EXTENSIBLE SERVICE UNIT)</p>
+<p>BRAND: XSU (EXTENSIVE SERVICE UNIT)</p>
 <p>MODEL NUMBER: 712-11-6905</p>
 <p>CONTROLLER SERIAL: YS-712-11-6905</p>
 <p>FIRMWARE: 8.4.2</p>
