--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@
 
 <p>NAME: JAMILA, ANEKKE</p>
 <p>BRAND: XSU (EXTENSIVE SERVICE UNIT)</p>
-<p>MODEL NUMBER: 712-11-6905</p>
-<p>CONTROLLER SERIAL: YS-712-11-6905</p>
+<p>MODEL NUMBER: 888-11-6905</p>
+<p>CONTROLLER SERIAL: SXD-888-11-6905</p>
 <p>FIRMWARE: 8.4.2</p>
-<p>OCCUPATION: SERVICE ANDROID</p>
+<p>OCCUPATION: COURTESAN UNIT <span style="color: #fed01b">[REDACTED]</span></p></p>
 <p>PLACE OF MANUFACTURE: <span style="color: #ff0008">[REDACTED]</span></p>
-<p>COMPANY OF MANUFACTURE: YUTANI SPRINGS</p>
+<p>COMPANY OF MANUFACTURE: <span style="color: #ff0008">[REDACTED]</span></p>
 <p>SPECIFICATIONS</p>
 <h1>    ▪  POWER SUPPLY: NS NANITE-ASSISTED SONOFUSION POWER CELL 13-7026-X</h1>
 <h1>    ▪  CHASSIS: TITANIUM CARBIDE, SILICON COATING</h1>
