--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 <p>MODEL NUMBER: 888-11-6905</p>
 <p>CONTROLLER SERIAL: SXD-888-11-6905</p>
 <p>FIRMWARE: 8.4.2</p>
-<p>OCCUPATION: COURTESAN UNIT <span style="color: #fed01b">[REDACTED]</span></p></p>
+<p>OCCUPATION: COURTESAN UNIT <span style="color: #fed01b">[RETROFIT]</span></p></p>
 <p>PLACE OF MANUFACTURE: <span style="color: #ff0008">[REDACTED]</span></p>
 <p>COMPANY OF MANUFACTURE: <span style="color: #ff0008">[REDACTED]</span></p>
 <p>SPECIFICATIONS</p>
