--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
     </nav>
 
 <p>NAME: JAMILA, ANEKKE</p>
-<p>BRAND: XSU (EXTENSIVE SERVICE UNIT)</p>
+<p>BRAND: SXDjr</p>
 <p>MODEL NUMBER: 888-11-6905</p>
 <p>CONTROLLER SERIAL: SXD-888-11-6905</p>
-<p>FIRMWARE: 8.4.2</p>
+<p>FIRMWARE: 8.5.0 beta 6</p>
 <p>OCCUPATION: COURTESAN UNIT <span style="color: #fed01b">[RETROFIT]</span></p></p>
 <p>PLACE OF MANUFACTURE: <span style="color: #ff0008">[REDACTED]</span></p>
 <p>COMPANY OF MANUFACTURE: <span style="color: #ff0008">[REDACTED]</span></p>
